--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <p><h4>My Address :-</h4>
     House No.121<br>
     Barse Nagar, Panchpaoli<br>
-    Nagpur, Maharasta<br>
+    Nagpur, Maharasta-440017<br>
     <h4>Phone Number:- 9028671773<br>
 
         Email Adddress:- senku740@gmail.com
